--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +7,7 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: #f0f4ff;
-  color: #1e3a8a;;
+  color: #1e3a8a;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -93,17 +92,37 @@ button[type="submit"] {
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 button[type="submit"]:hover {
-  background: #2563eb;
+  background: #1e40af;
+}
+
+
+.back-button {
+  margin-top: 25px;
+  width: 100%;
+  background: #0054fd; 
+  color: white;
+  padding: 14px 20px;
+  font-size: 1.1rem;
+  font-weight: 700;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+  background: #006aff; 
 }
 
 form a {
   display: block;
   margin-top: 15px;
   text-align: center;
-  color: #1e3a8a;;
+  color: #1e3a8a;
   font-weight: 600;
   transition: color 0.3s ease;
 }
